--- a/docker-compose.base.yaml
+++ b/docker-compose.base.yaml
@@ -74,6 +74,7 @@ services:
             - NAKED_FQDN=${NAKED_FQDN}
             - POSTGREST_PORT=${POSTGREST_PORT}
             - AUTHAPP_PORT=${AUTHAPP_PORT}
+            - SSE_PORT=${SSE_PORT}
             - AWS_ACCESS_KEY_ID=${CADDY_ACME_ACCESS_KEY_ID}
             - AWS_SECRET_ACCESS_KEY=${CADDY_ACME_SECRET_ACCESS_KEY}
             - AWS_REGION=${CADDY_ACME_AWS_REGION}
